--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,14 +9,17 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">
+      <div class="Left"><div class="logo">
+        
+      </div>
         LOGO
       </div>
       <ul class="links">
         <li><a href="https://google.com">link-one</a></li>
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
-      </ul>
+      </ul></div>
+      
       <button class="notifications">
         1 new notification
       </button>
